Restore auth session in chat, fix history empty-list typing, add retrieval test